Make mobile design functional - Prevent #content from overflowing onto keyboard - Keep key coloring consistent - Use absolute positioning

--- a/App/index.css
+++ b/App/index.css
@@ -21,6 +21,8 @@ body {
   padding: 0px;
   height: 100vh;
   width: 100vw;
+  background-color: white;
+  color: black;
 }
 
 button {
@@ -209,6 +211,7 @@ button {
   margin-left: calc(50vw - 33.5vh);
   margin-top: 7.5vh;
   margin-bottom: 2.5vh;
+  color: black;
 }
 
 #modal {
@@ -605,201 +608,34 @@ button {
   }
 }
 
-@media (orientation: portrait) {
-  #content {
-    display: block;
-    width: 55vw;
-    height: 50vh;
-    margin-left: 22.5vw;
-    padding: 0px;
-    padding-top: calc(25vh - 22.5vw);
-    padding-left: 3.5vw;
-    margin-top: 17.5vh;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    user-select: none;
-  }
+@media (max-aspect-ratio: 2/3) {
 
-  #help-button {
-    padding-top: calc(2.5vh - 2.5vw);
-  }
-
-  .word {
-    width: 100%;
-    height: 9vw;
-  }
-
-  .box {
-    width: 8vw;
-    height: 8vw;
-    line-height: 8vw;
-    margin: 0.5vw;
-    float: left;
-    text-align: center;
-    font-size: 4.8vw;
-    font-weight: bold;
-    border: 0.375vw solid #e6e6e6;
-  }
-
-  .paint {
-    animation: 0.5s focusPortrait;
-  }
-
-  .box.gray, 
-  .box.green, 
-  .box.yellow, 
-  .box.pink, 
-  .box.blue {
-    animation: 0.5s flipPortrait;
-  }
-
-  #keyboard {
+  #bar {
     position: absolute;
-    bottom: 5vh;
-    width: 67vw;
-    height: 20vh;
-    display: block;
-    margin-top: 0px;
-    margin-left: 16.5vw;
-  }
-
-  .key {
-    position: relative;
-    width: 5vw;
-    height: 100%;
-    line-height: 5vh;
-    float: left;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 0.5vw;
-    border-radius: 0.5vw;
-    background-color: #e6e6e6;
-    font-size: 3.75vw;
-    text-align: center;
-    user-select: none;
-  }
-
-  .icon-container {
-    background-color: white;
-    padding: 0.625vw;
-  }
-
-  #modal {
-    display: none;
-    position: fixed;
-    z-index: 10;
-    width: 50vw;
-    height: 30vh;
-    left: 25vw;
-    top: 37.5vh;
-    background-color: #fff;
-    border-radius: 5vh;
-    box-shadow: 0px 0px 10vh 5vh rgba(0, 0, 0, 0.5);
+    top: 0vw;
+    left: 0vw;
   }
 
   #left-bar {
-    top: calc(5vh - 2.5vw);
+    position: absolute;
+    top: 2.5vh;
     left: 5vw;
-    width: 20vw;
   }
 
   #right-bar {
-    top: calc(5vh - 2.5vw);
-    left: 80vw;
-    width: 20vw;
+    position: absolute;
+    top: 2.5vh;
+    left: 70vw;
   }
 
-  .header-icon {
-    display: block;
-    height: 5vw;
-  }
-
-  #stats-modal {
-    display: none;
-    visibility: visible;
-    position: fixed;
-    z-index: 5;
-    top: 20vh;
-    left: 20vw;
-    width: 60vw;
-    height: 60vh;
-    background-color: rgb(255, 255, 255);
-    border-radius: 5vh;
-    box-shadow: 0px 0px 10vh 5vh rgba(0, 0, 0, 0.5);
-  }
-
-  #stats-modal.show {
-    display: block;
-  }
-
-  #stats-modal-content {
-    margin-top: 7.5vh;
-    margin-left: 7.5vw;
-    height: 45vh;
-    width: 45vw;
-  }
-
-  @keyframes focusPortrait {
-    0% {
-      width: 8vw;
-      height: 8vw;
-      line-height: 8vw;
-      margin-top: 0.5vw;
-      margin-left: 0.5vw;
-      margin-right: 0.5vw;
-      font-size: 4.8vw;
-    }
-    50% {
-      width: 6vw;
-      height: 6vw;
-      line-height: 6vw;
-      margin-top: 1.5vw;
-      margin-left: 1.5vw;
-      margin-right: 1.5vw;
-      font-size: 3.6vw;
-    }
-    100% {
-      width: 8vw;
-      height: 8vw;
-      line-height: 8vw;
-      margin-top: 0.5vw;
-      margin-left: 0.5vw;
-      margin-right: 0.5vw;
-      font-size: 4.8vw;
-    }
-  }
-
-  @keyframes flipPortrait {
-    0% {
-      height: 8vw;
-      margin-top: 0.5vw;
-      font-size: 4.8vw;
-    }
-    50% {
-      height: 0vw;
-      margin-top: 4.5vw;
-      font-size: 0vw;
-    }
-    100% {
-      height: 8vw;
-      margin-top: 0.5vw;
-      font-size: 4.8vw;
-    }
-  }
-}
-
-@media (orientation: portrait) and (max-aspect-ratio: 7/16) {
   #content {
-    display: block;
     position: absolute;
     margin: 0px;
+    top: 15vh;
+    left: 10vw;
     width: 80vw;
     height: 80vw;
-    bottom: 45vh;
-    left: 10vw;
-    top: 15vh;
-    padding: 0px;
-    padding-left: 7.5vw;
+    padding: 2.5vh;
     overflow-x: hidden;
     overflow-y: scroll;
     user-select: none;
@@ -807,23 +643,20 @@ button {
 
   .word {
     width: 100%;
-    height: 13vw;
+    height: 20%;
   }
 
   .box {
     width: 12vw;
     height: 12vw;
     line-height: 12vw;
-    margin: 0.5vw;
-    float: left;
-    text-align: center;
-    font-size: 11.52vw;
-    font-weight: bold;
-    border: 0.375vw solid #e6e6e6;
+    font-size: 7.2vw;
+    margin: 0px;
+    margin-right: 1vw;
   }
 
   .paint {
-    animation: 0.5s focusMobile;
+    animation: none;
   }
 
   .box.gray, 
@@ -836,143 +669,55 @@ button {
 
   #keyboard {
     position: absolute;
-    bottom: 5vh;
-    width: 80vw;
-    height: 20vh;
-    display: block;
     margin: 0px;
-    margin-bottom: 2.5vh;
-    margin-left: 10vw;
+    top: calc(20vh + 80vw);
+    left: 10vw;
+    width: 80vw;
+    height: 25vw;
   }
 
+  .row {
+    padding-left: 4vw;
+  }
+  
   .key {
     position: relative;
-    width: 6.125vw;
+    width: 5vw;
     height: 100%;
-    line-height: 5vh;
     float: left;
     margin-top: 0px;
     margin-bottom: 0px;
-    margin-right: 0.5vw;
-    border-radius: 0.5vw;
+    margin-right: 0.5vh;
+    border-radius: 0.5vh;
     background-color: #e6e6e6;
-    font-size: 4.594vw;
+    font-size: 3.75vw;
     text-align: center;
     user-select: none;
   }
 
-  .icon-container {
-    background-color: white;
-    padding: 0.625vh;
-  }
-
   .inline-icon {
-    height: 4.594vw;
-    margin: auto;
-    margin-top: calc(2.5vh - 2.297vw);
-    display: block;
-  }
-
-  #modal {
-    display: none;
-    position: fixed;
-    z-index: 10;
-    width: 50vw;
-    height: 30vh;
-    left: 25vw;
-    top: 37.5vh;
-    background-color: #fff;
-    border-radius: 5vh;
-    box-shadow: 0px 0px 10vh 5vh rgba(0, 0, 0, 0.5);
-  }
-
-  #left-bar {
-    top: calc(5vh - 2.5vw);
-    left: 5vw;
-    width: 20vw;
-  }
-
-  #right-bar {
-    top: calc(5vh - 2.5vw);
-    left: 80vw;
-    width: 20vw;
-  }
-
-  .header-icon {
-    display: block;
-    height: 5vw;
-  }
-
-  #stats-modal {
-    display: none;
-    visibility: visible;
-    position: fixed;
-    z-index: 5;
-    top: 20vh;
-    left: 10vw;
-    width: 80vw;
-    height: 60vh;
-    background-color: rgb(255, 255, 255);
-    border-radius: 5vh;
-    box-shadow: 0px 0px 10vh 5vh rgba(0, 0, 0, 0.5);
-  }
-
-  #stats-modal.show {
-    display: block;
-  }
-
-  #stats-modal-content {
-    margin-top: calc(30vh - 35vw);
-    margin-left: 5vw;
-    height: 70vw;
-    width: 70vw;
-  }
-
-  @keyframes focusMobile {
-    0% {
-      width: 12vw;
-      height: 12vw;
-      line-height: 12vw;
-      margin-top: 0.5vw;
-      margin-left: 0.5vw;
-      margin-right: 0.5vw;
-      font-size: 11.52vw;
-    }
-    50% {
-      width: 9vw;
-      height: 9vw;
-      line-height: 9vw;
-      margin-top: 2vw;
-      margin-left: 2vw;
-      margin-right: 2vw;
-      font-size: 8.64vw;
-    }
-    100% {
-      width: 12vw;
-      height: 12vw;
-      line-height: 12vw;
-      margin-top: 0.5vw;
-      margin-left: 0.5vw;
-      margin-right: 0.5vw;
-      font-size: 11.52vw;
-    }
+    height: 3.75vw;
   }
 
   @keyframes flipMobile {
     0% {
       height: 12vw;
-      margin-top: 0.5vw;
-      font-size: 11.52vw;
+      line-height: 12vw;
+      font-size: 7.2vw;
+      margin-top: 0px;
     }
     50% {
       height: 0vw;
-      margin-top: 6.5vw;
+      line-height: 0vw;
       font-size: 0vw;
+      margin-top: 6vw;
     }
     100% {
       height: 12vw;
-      margin-top: 0.5vw;
-      font-size: 11.52vw;
+      line-height: 12vw;
+      font-size: 7.2vw;
+      margin-top: 0px;
     }
   }
+
 }
